<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradStart">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/homePageImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/homePageImg"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/homePageLinearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/gW"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/goal_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gF"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/goal_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gM"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/goal_muscle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/homePageLinearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/cW"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"  />

                <TextView
                    android:id="@+id/current_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cF"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/current_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cM"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="22sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/current_muscle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFFFFFFF"
                    android:textSize="21sp"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
